  o Added special command REQ that can be prepended before any command to
    identify the response with a client specified request id, allowing a client
    to know exactly what asynchronous response matched a specific request.
  o Added support for listing contents of a specific directory for CLS, TLS,
    DATA LIST and THUMBNAIL LIST.



CasparCG 2.1.0 Beta 1 (w.r.t 2.0.7 Stable)
==========================================

General
-------

  o 64 bit!
  o Linux support!
    + Moved to CMake build system for better platform independence.
      + Contributions before build system switch (not w.r.t 2.0.7 Stable):
        + gitrev.bat adaptions for 2.1 (Thomas Kaltz III).
    + Thanks to our already heavy use of the pimpl idiom, abstracting platform
      specifics was easily done by having different versions of the .cpp files
      included in the build depending on target platform. No #ifdef necessary,
      except for in header only platform specific code.
    + Flash, Bluefish and NewTek modules are not ported to the Linux build.
    + Contributions during development (not w.r.t 2.0.7 Stable):
      + Fixed compilation problems in Linux build (Dimitry Ishenko).
      + Fixed compilation problem in GCC 5 (Krzysztof Pyrkosz).
      + Fixed thumbnail image saving on Linux (Krzysztof Pyrkosz).
      + Fixed compilation problem in PSD module (Krzysztof Pyrkosz).
  o Major code refactoring:
    + Mixer abstraction so different implementations can be created. Currently
      CPU mixer and GPU mixer (previously the usage of the GPU was mandatory)
      exists.
    + Flattened folder structure for easier inclusion of header files.
    + Many classes renamed to better describe the abstractions they provide.
    + Sink parameters usually taken by value and moved into place instead of
      taken by const reference as previously done.
    + Old Windows specific AsyncEventServer class has been replaced by platform
      independent implementation based on Boost.Asio.